[gd_scene load_steps=9 format=3 uid="uid://bph31pcq5v5m"]

[ext_resource type="Script" path="res://Scripts/Environment behavior Scripts/BreakableWall.gd" id="1_1p4su"]
[ext_resource type="Script" path="res://Scripts/Common Entity Scripts/HealthComponent.gd" id="1_q2j3c"]
[ext_resource type="Texture2D" uid="uid://dh4jjypovdqb2" path="res://Sprites/Environments/Breakable Wall.png" id="1_ro01d"]
[ext_resource type="Texture2D" uid="uid://bp63qygkrvtgy" path="res://Sprites/Environments/Forrest/Ground block.png" id="4_3bou7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66hdo"]
size = Vector2(8, 32)

[sub_resource type="Animation" id="Animation_r21dp"]
resource_name = "mask_fade_out"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mask:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_38r4v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mask:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x4od4"]
_data = {
"RESET": SubResource("Animation_38r4v"),
"mask_fade_out": SubResource("Animation_r21dp")
}

[node name="BreakableWall" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_1p4su")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("1_q2j3c")
max_health = 3
heal_ammount = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_66hdo")

[node name="Visuals" type="Node2D" parent="."]

[node name="BreakableWall" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_ro01d")
hframes = 3

[node name="BreakableWall2" type="Sprite2D" parent="Visuals"]
visible = false
texture = ExtResource("1_ro01d")
hframes = 3
frame = 1

[node name="BreakableWall3" type="Sprite2D" parent="Visuals"]
visible = false
texture = ExtResource("1_ro01d")
hframes = 3
frame = 2

[node name="Mask" type="Sprite2D" parent="Visuals"]
position = Vector2(-40.5, 0)
scale = Vector2(8.125, 4)
texture = ExtResource("4_3bou7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals"]
libraries = {
"": SubResource("AnimationLibrary_x4od4")
}
